# sena

./: .gitignore  CARBONCLAW.md  CLAUDE.md  README.md  SENA.md  docs.md  index.html  install.ps1  install.sh  mypy_output.txt  pyproject.toml
carbonclaw/: __init__.py
carbonclaw/agents/: base.py  docs.py  evolution.py  healer.py  healer_daemon.py  research.py  supervisor.py
carbonclaw/cli/: chat.py  config_cmd.py  doc_cmd.py  healer_daemon_cmd.py  init.py  main.py  playback_cmd.py  risk_cmd.py  run.py  schedule_cmd.py  slash.py  status.py  template_cmd.py  tuning_cmd.py
carbonclaw/config/: settings.py  templates.py
carbonclaw/context/: manager.py  optimizer.py
carbonclaw/core/: base.py  benchmark.py  events.py  router.py
carbonclaw/distributed/: queue.py  session.py
carbonclaw/memory/: __init__.py  graph.py  hybrid.py  sqlite.py
carbonclaw/prompts/: base.py  pptxgenjs_context.py
carbonclaw/providers/: anthropic.py  gemini.py  ollama.py  openai.py  registry.py
carbonclaw/sandbox/: docker.py
carbonclaw/telemetry/: carbon.py  grid.py  otel.py  playback.py  scheduler.py  store.py
carbonclaw/tests/unit/: test_carbon.py  test_collaborative_sessions.py  test_distributed.py  test_docs.py  test_graph_memory.py  test_healer.py  test_hybrid_memory.py  test_optimizer.py  test_playback.py  test_plugins.py  test_privacy.py  test_providers.py  test_roadmap_features.py  (+9 more)
carbonclaw/tools/: base.py  nodejs.py  shell.py  vision.py  visual_testing.py  web_search.py
carbonclaw/ui/: banner.py  chat_renderer.py  spinners.py  status_bar.py  streaming.py
carbonclaw/utils/: privacy.py
carbonclaw/web/: app.py
sena/: __init__.py
sena/agents/: __init__.py  base.py  coding.py  docs.py  planner.py  qa.py  review.py  snapshot.py  supervisor.py  swarm.py
sena/cli/: chat.py  config_cmd.py  doctor.py  init.py  main.py  memory_cmd.py  models.py  plan.py  run.py  slash.py  snapshot.py  telemetry_cmd.py  tui_cmd.py  update.py  web.py  worker.py
sena/config/: settings.py
sena/context/: instructions.py  manager.py
sena/core/: base.py  events.py  models.py
sena/distributed/: queue.py  rpc.py  serialization.py
sena/memory/: sqlite.py
sena/plugins/: base.py
sena/prompts/: base.py
sena/providers/: anthropic.py  base.py  gemini.py  ollama.py  openai.py  registry.py
sena/sandbox/: docker.py
sena/telemetry/: otel.py  store.py
sena/tools/: agent.py  base.py  browser.py  file.py  git.py  github_cli.py  mcp.py  plan.py  python_interpreter.py  search.py  shell.py  skill.py  ui.py  web_search.py
sena/ui/: banner.py  chat_renderer.py  demo_mascot.py  mascot.py  spinners.py  streaming.py  tui.py
sena/vector/: chroma.py
sena/web/: app.py
sena/workers/: pool.py
(+10 files in other folders)
