[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sena"
version = "0.1.0"
description = "Sena — AI-native runtime and orchestration system for autonomous software engineering, research workflows, and multi-agent collaboration."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Sena Contributors" },
]
keywords = ["ai", "agent", "llm", "cli", "automation", "orchestration", "code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # CLI & Terminal UX
    "typer>=0.15.0",
    "rich>=13.9.0",
    "textual>=0.88.0",
    # Data & Async
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.21.0",
    # LLM Providers (native SDKs for full control)
    "openai>=1.60.0",
    "anthropic>=0.45.0",
    "google-genai>=1.0.0",
    # Sandbox & Execution
    "docker>=7.1.0",
    # Utilities
    "platformdirs>=4.3.0",
    "tenacity>=9.0.0",
    "structlog>=25.1.0",
    "orjson>=3.10.0",
    "jinja2>=3.1.6",
    "playwright>=1.59.0",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "tomli-w>=1.2.0",
    "ddgs>=9.14.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[project.scripts]
sena = "sena.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["sena"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM", "ASYNC",
]
ignore = [
    "D100", "D104", "D203", "D213",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["sena/tests"]

[tool.coverage.run]
source = ["sena"]

[dependency-groups]
dev = [
    "types-jinja2>=2.11.9",
]
